[gd_scene load_steps=3 format=3 uid="uid://dtmpwgvxseroy"]

[ext_resource type="Script" uid="uid://dijs0q564vsxl" path="res://scenes/scene_entrance/scene_entrance.gd" id="1_tyhpb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyhpb"]
size = Vector2(16, 15)

[node name="SceneEntrance" type="Area2D"]
script = ExtResource("1_tyhpb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_tyhpb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
